Fix contrast yet again, cleanup

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
   margin-left: 0.2rem;
   font-size: var(--font-smallest);
   color: var(--text-muted);
-  opacity: var(--icon-opacity);
   padding: 0.2rem;
   padding-top: 0rem;
   padding-bottom: 0.1rem;
